# stemgen-platform

./: README.md  RESEARCH-SCOPE.md  VERIFICATION.md  feature_list.json  progress.md  pyproject.toml
apps/curriculum/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/users/: tests.py  views.py
config/: settings.py  tests.py  urls.py  views.py
docs/: ARCHITECTURE.md  PRODUCT.md
docs/adr/: 0001-django-viewflow-platform.md  0002-postgres-redis-celery.md  0003-email-based-custom-user.md  0004-oss-viewflow-extension-strategy.md  0005-optional-llm-enrichment-for-curriculum-intake.md  0006-async-run-handoff-contract.md  0007-configurable-workflow-implementation.md  0008-reproducible-curriculum-source-registry.md  0009-whatsapp-evaluator-channel.md  0010-project-repository-commit-push-policy.md  0011-automated-curriculum-review-before-human-selection.md  0012-curriculum-intake-ia-and-generated-ids.md
docs/curriculum/: automated-curriculum-review.md  curriculum-data-schema.md  curriculum-extraction-review-ux.md  curriculum-intake-ia-user-stories.md  reproducible-curriculum-data.md  source-registry.md  tie-source-snapshot-plan.md  topic-screening-rules.md  verbalized-sampling-review.md
docs/evaluation/: evaluator-channel-model.md  evidence-model.md  export-plan.md  provenance-and-replay.md  rubric.md  whatsapp-channel.md  workflows.md
docs/platform/: configurable-research-workflow-engine.md  configurable-workflows.md  lims-workflow-patterns-review.md  research-workflow-workspace.md  (+2 more)
scripts/: local_preview.sh  validate_json.py
(+55 files in other folders)
