[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dissertation-platform"
version = "0.1.0"
description = "Cookiecutter-style dissertation platform harness for curriculum-aligned STEM media experimentation."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
  "Django==6.0.5",
  "django-viewflow==2.2.15",
  "django-allauth==65.16.1",
  "psycopg[binary]==3.3.4",
  "celery==5.6.3",
  "redis==7.4.0",
  "requests==2.32.5",
  "PyJWT==2.10.1",
  "cryptography==45.0.7",
  "jsonschema==4.25.1",
]

[tool.setuptools]
py-modules = []
